# deepin-editor

./: .clog.toml  .gitignore  .packit.yaml  CHANGELOG.md  CMakeLists.txt  README.md  README.zh_CN.md  com.deepin.editor.conf  com.deepin.editor.daemon.service  com.deepin.editor.policy  cpserver.sh  deepin-edit.pro  deepin-edit.qrc  deepin-editor.desktop  deepin-editor.pro  deepin-editor.qrc  deepin-note.pro  deepin-note.qrc  deploy_dep  install.pri  install_dep  linglong.yaml  org.deepin.editor.install  rmserver.sh  translate_generation.sh
src/: CMakeLists.txt  bookmarkwidget.cpp  bookmarkwidget.h  codeflodarea.cpp  codeflodarea.h  dbusinterface.h  deepin-editor.pro  deepin-editor.qrc  deletebackcommond.h  dtextedit.cpp  dtextedit.h  editor.cpp  editor.h  editorapplication.cpp  editorapplication.h  editorbuffer.cpp  editorbuffer.h  editwrapper.cpp  editwrapper.h  encoding.cpp  encoding.h  environments.h  fileloadthread.cpp  fileloadthread.h  findbar.cpp  findbar.h  fontitemdelegate.h  highlighter.cpp  inserttextundocommand.cpp  jumplinebar.cpp  jumplinebar.h  leftareaoftextedit.cpp  leftareaoftextedit.h  linebar.cpp  linebar.h  linenumberarea.cpp  linenumberarea.h  main.cpp  main_window.cpp  main_window.h  (+26 more)
src/basepub/: load_libs.c  load_libs.h
src/common/: CSyntaxHighlighter.cpp  CSyntaxHighlighter.h  comment_global.h  common.h  config.cpp  config.h  dbusinterface.cpp  dbusinterface.h  encoding.cpp  encoding.h  eventlogutils.cpp  eventlogutils.h  fileloadthread.cpp  fileloadthread.h  iflytek_ai_assistant.cpp  iflytek_ai_assistant.h  iflytekaiassistantthread.cpp  iflytekaiassistantthread.h  performancemonitor.cpp  performancemonitor.h  settings.cpp  settings.h  text_file_saver.cpp  text_file_saver.h  urlinfo.h  utils.cpp  utils.h
src/configs/json/: org_deepin_editor.hpp
src/controls/: findbar.cpp  findbar.h  fontitemdelegate.cpp  fontitemdelegate.h  jumplinebar.cpp  jumplinebar.h  linebar.cpp  linebar.h  replacebar.cpp  replacebar.h  settingsdialog.cpp  tabbar.cpp  tabbar.h  toast.cpp  toast.h  toolbar.cpp  toolbar.h  warningnotices.cpp  warningnotices.h
src/dbus/: com_deepin_dde_daemon_dock.cpp  com_deepin_dde_daemon_dock.h  com_deepin_dde_daemon_dock_entry.cpp  com_deepin_dde_daemon_dock_entry.h
src/dbus/types/: windowinfomap.cpp  windowinfomap.h  windowlist.cpp  windowlist.h
src/dedit/: CMakeLists.txt
src/editor/: FlashTween.cpp  FlashTween.h  bookmarkwidget.cpp  bookmarkwidget.h  changemarkcommand.cpp  changemarkcommand.h  codeflodarea.cpp  codeflodarea.h  convertcasecommond.cpp  convertcasecommond.h  deletebackcommond.cpp  deletebackcommond.h  deletetextundocommand.cpp  deletetextundocommand.h  dtextedit.cpp  dtextedit.h  editwrapper.cpp  editwrapper.h  endlineformatcommond.cpp  endlineformatcommond.h  indenttextcommond.cpp  indenttextcommond.h  insertblockbytextcommond.cpp  insertblockbytextcommond.h  inserttextundocommand.cpp  inserttextundocommand.h  leftareaoftextedit.cpp  leftareaoftextedit.h  linenumberarea.cpp  linenumberarea.h  replaceallcommond.cpp  replaceallcommond.h  showflodcodewidget.cpp  showflodcodewidget.h  uncommentselection.cpp  uncommentselection.h  undolist.cpp  undolist.h
src/encodes/: detectcode.cpp  detectcode.h  encodes.ini  encodes1.ini
src/qss/: main.qss
src/resources/: settings.json  settings.json.in
src/resources/licenses/: deepin-editor.json
src/thememodule/: themeitemdelegate.cpp  themeitemdelegate.h  themelistmodel.cpp  themelistmodel.h  themelistview.cpp  themelistview.h  themepanel.cpp  themepanel.h
src/themes/: atom_dark.theme  breeze_dark.theme  deepin.theme  deepin_dark.theme  solarized_dark.theme  solarized_light.theme
src/themewidgets/: themeitemdelegate.cpp  themelistmodel.cpp  themelistmodel.h  themepanel.cpp  themepanel.h
src/widgets/: ColorSelectWdg.cpp  ColorSelectWdg.h  bottombar.cpp  bottombar.h  ddropdownmenu.cpp  ddropdownmenu.h  pathsettintwgt.cpp  pathsettintwgt.h  toast.cpp  toast.h  window.cpp  window.h
test/: CMakeLists.txt  cmake-lcov-test.sh
test/src/: tes_replacebar.h  test_editwrapper.cpp  test_editwrapper.h  test_fileloadthread.cpp  test_fileloadthread.h  test_findbar.cpp  test_findbar.h  test_jumplinebar.cpp  test_jumplinebar.h  test_leftareaoftextedit.cpp  test_leftareaoftextedit.h  test_linebar.cpp  test_linebar.h  test_main.cpp  test_performancemonitor.cpp  test_performancemonitor.h  test_replacebar.cpp  test_replacebar.h  test_setting.cpp  test_setting.h  test_showflodcodewidget.cpp  test_showflodcodewidget.h  test_startmanager.cpp  test_startmanager.h  test_tabbar.cpp  test_tabbar.h  test_textedit.cpp  test_textedit.h  test_uncommentselection.cpp  test_uncommentselection.h  test_utils.cpp  test_utils.h  test_warningnotices.cpp  test_warningnotices.h  test_window.cpp  test_window.h
test/src/common/: test_csyntaxhighlighter.cpp  test_csyntaxhighlighter.h  test_encoding.cpp  test_encoding.h  test_fileloadthread.cpp  test_fileloadthread.h  test_setting.h  test_utils.cpp
test/src/controls/: test_findbar.h  test_toast.cpp  test_toast.h  test_warningnotices.h
test/src/editor/: test_editwrapper.cpp  test_editwrapper.h  test_leftareaoftextedit.cpp  test_leftareaoftextedit.h  test_textedit.cpp  test_textedit.h  test_textundocommand.cpp  test_textundocommand.h  test_uncommentselection.cpp
test/src/thememodule /: test_themeitemdelegate.h
test/src/widgets/: test_colorselectwidget.cpp  test_colorselectwidget.h  test_ddropdownmenu.cpp  test_window.cpp
tests/: CMakeLists.txt  cmake-lcov-test.sh  test-prj-running.sh
tests/src/: stub.h  test_editorapplication.cpp  test_editorapplication.h  test_main.cpp  test_startmanager.cpp  ut_editorapplication.cpp  ut_editorapplication.h  ut_main.cpp  ut_startmanager.cpp  ut_startmanager.h
tests/src/common/: test_csyntaxhighlighter.cpp  test_csyntaxhighlighter.h  test_encoding.cpp  test_fileloadthread.cpp  test_performancemonitor.cpp  test_performancemonitor.h  test_setting.cpp  test_setting.h  test_utils.cpp  test_utils.h  ut_csyntaxhighlighter.cpp  ut_csyntaxhighlighter.h  ut_encoding.cpp  ut_encoding.h  ut_fileloadthread.cpp  ut_setting.cpp  (+6 more)
(+417 files in other folders)
